@@ -14,3 +14,5 @@ _____________________
 	Bug Fixes:
 		-push/pop style for every zone draw properly (no longer inherit style from parent zones)
 		-push/pop style in touch methods properly
+		-Try to do proper shutdown in TouchClient
+		-set Zone.parent to null in TouchClient.add() to make sure we draw the Zone at the top level unless it gets a new parent set
